@@ -1,3 +1,11 @@
+2010-11-16  Vladimir Serbinenko  <phcoder@gmail.com>
+
+	Make legacy_source behave like source.
+
+	* grub-core/commands/legacycfg.c (legacy_file): Don't call
+	grub_show_menu.
+	(grub_cmd_legacy_source): Call grub_show_menu if needed.
+
 2010-11-16  Colin Watson  <cjwatson@debian.org>
 
 	* conf/Makefile.common (CFLAGS_GNULIB): Add -Wno-unused-parameter.
